# faceattendify_trymuna

./: README.md  Smurf acct.docx  gunicorn_config.py  main.py  nixpkgs-config.nix  nixpkgs-config.nix.nix  procfile  pyproject.toml  railway.json  railway.yml  requirements.txt  wsgi.py
static/assets/css/: material-dashboard23cd.css
static/js/: camera.js
templates/: agrouplist.html  edit_user.html  footer.html  fr_page.html  gendataset.html  grouplist.html  groups.html  header.html  indexx.html  join.html  login.html  meeting.html  report.html  signup.html  teachersignup.html  updateownprofile.html  updateprofile.html  userlist.html  users.html
