[tool.nixpkgs-fmt]
version = "1.7.1"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[tool.poetry.build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.nixpkgs-fmt.nixpkgs-config]
file = "./nixpkgs-config.nix"

[tool.nixpkgs-fmt.nixpkgs-overlays]
path = "./nixpkgs-overlays"